# LLM-recipes

./: .gitignore  README.md  pyproject.toml  requirements.txt
fine_tuning/: FT google_gemma_2B for CLM.ipynb  Finetune few layers of LLM with WandB.ipynb  QLoRA fine tuning.ipynb  SFTTrainer and WandB.ipynb  finetuning data prep.ipynb  ft gpt2 using HF trainer.ipynb  readme.md  trainer api.ipynb
inference/: low precision model inference.ipynb  text generation fine tuned model.ipynb
multimodal/: Document AI QA training.ipynb  PaliGemma LMM.ipynb
notebooks/: text generation.ipynb
torchtune/: custom_eval_config.yaml  custom_generation_config.yaml  custom_llama3_1_8B_qlora_ft.yaml
